# dotfiles

./: .Xresources  .bashrc  .gitconfig  .gitignore  .gtkrc-2.0  .profile  .tmux.conf.local  .zshrc  README.md  cargo_install.txt  code_extensions.txt  config.yaml  flatpaks.txt  flatpaks2.txt  locale.conf  micro_plugins.txt  npm_install.txt  pacman_all.txt  pacman_installed.txt  pacman_manually.txt  pip_install.txt  sitecustomize.py  system_pythonPython 3.10.10.txt  system_pythonPython 3.10.8.txt  system_pythonPython 3.10.9.txt  system_pythonPython 3.11.3.txt  system_pythonPython 3.11.5.txt  system_pythonPython 3.11.6.txt  system_pythonPython 3.12.7.txt  system_pythonPython 3.13.7.txt  update.sh
.config/: pavucontrol.ini  starship.toml
.config/clipit/: clipitrc
.i3/: config  config.original  status.toml  status2.toml
.screenlayout/: ext_right.sh  external.sh  external_primary.sh  horizon.sh  ideal.sh  laptop_left.sh  vertical.sh
X11/: 00-keyboard.conf
dotfiles/: Xmodmap  bashrc  foo.cfg  gitconfig  gitignore  gtkrc-2.0  pypirc  wacom_utility  wezterm.lua  zshrc
dotfiles/config/kak/plugins/kak-subvert/: Cargo.toml  Changelog.md  README.md  subvert.kak  tbump.toml
dotfiles/config/kak/plugins/kak-subvert/src/: main.rs
dotfiles/config/kak/plugins/kakship/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  starship.toml
dotfiles/config/kak/plugins/kakship/rc/: kakship.kak
dotfiles/config/kak/plugins/kakship/src/: error.rs  main.rs
guides/: clipman.md  i3.md  lunarvim.md  micro.md  pacman.md  tilix.md  vim.md
xfce4/: xfce4-screenshooter
(+367 files in other folders)
