[package]
name = "kak-subvert"
version = "1.0.3"
authors = ["Dimitri Merejkowsky <dimitri.merejkowsky@tanker.io>"]
edition = "2021"
description = "Casing conversions for Kakoune"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/dmerejkowsky/kak-subvert"
keywords = ["kakoune", "subvert", "inflect"]
categories = ["command-line-utilities"]

[dependencies]
Inflector = "0.11.4"
