[package]
name = "kakship"
version = "0.2.9"
authors = ["Éric BURGHARD <eric@itsufficient.me>"]
edition = "2018"

[dependencies]
kak = { git = "https://github.com/eburghar/kak.rs.git", tag = "v0.1.2" }
# kak = { path = "../kak" }
yew-ansi = { git = "https://github.com/eburghar/yew-ansi.git", default-features = false }
